# afm_exp

./: .gitignore  README.md  main.py  pyproject.toml
craftium_runs/: armfm_ppo_choptree.py  evaluate_agent.py
experiments/exp__lstmppo/: lstmppo_requirements.txt  multi_seed_lstmpo_evaluate.py  single_seed_lstmppo_evaluate.py  train.py
experiments/exp__lstmppo/config/.ipynb_checkpoints/: config-checkpoint.yaml
experiments/exp_armfmppo/: .env.example  armfmppo_requirements.txt  single_seed_armfmppo_evaluate.py  train.py
experiments/exp_armfmppo/config/: config.yaml
experiments/exp_dreamer/: dreamer_requirements.txt  single_seed_dreamer_evaluate.py  train.py  yobi_evaluate.py
experiments/exp_dreamer/config/: config.yaml
output/: .gitkeep
